Modify the usertype
